<resources>
    <string name="app_name">UberFleetControl</string>
    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_performance">Performance</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_payments">Payments</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>