<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/title_performance" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_baseline_payment_24"
        android:title="@string/title_payments" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>