<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.uberfleetcontrol.ui.map.MapFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_performance"
        android:name="com.example.uberfleetcontrol.ui.performance.PerformanceFragment"
        android:label="@string/title_performance"
        tools:layout="@layout/fragment_performance" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.uberfleetcontrol.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.example.uberfleetcontrol.ui.payments.PaymentFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.uberfleetcontrol.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>